# cpack-exercise-wt2425

./: .gitignore  CMakeLists.txt  Description.txt  Dockerfile  LICENSE  README.md  build-package-copy.sh  build_package.sh  changelog  copyright  copytardeb.sh  cpack-package-creation.sh  cpackexample-0.1.0-Linux.deb  cpackexample.1  libcpackexamplelib_0.1.0_amd64.deb  lintian.diff  lintian_final.txt  lintian_initial.txt  main.cpp  report.txt  solution.vtk
cmake/: CPackConfig.cmake  changelog
cmake/debian/: CHANGELOG  COPYRIGHT  changelog  copyright  postinst  postrm
cmake/docs/: changelog  copyright
cmake/documents/: copyright
cmake/files/: CHANGELOG
debian/: changelog  copyright  postrm  shlibs  triggers
fem/: fem.cpp  fem.hpp
filesystem/: filesystem.cpp  filesystem.hpp
flatset/: flatset.cpp  flatset.hpp
output/: cpackexample-0.1.0-Linux.deb
yamlParser/: config.yml  yamlParser.cpp  yamlParser.hpp
